Log-output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: writer-reader-dep
  namespace: app-space
spec:
  replicas: 1
  selector:
    matchLabels:
      app: writer-reader
  template:
    metadata:
      labels:
        app: writer-reader
    spec:
      volumes: # Define volume
        - name: shared-timestamp
          emptyDir: {}
        - name: config-volume 
          configMap:
              name: log-config
      containers:
        - name: log-writer
          image: mlipsan/log-output-writer:v2.01
          volumeMounts: # Mount volume
          - name: shared-timestamp
            mountPath: /usr/src/app/files
        - name: log-reader
          image: mlipsan/log-output-reader:4.1
          readinessProbe:
            initialDelaySeconds: 10 
            periodSeconds: 5 
            httpGet:
               path: /healthz
               port: 3000
          volumeMounts: # Mount volume
          - name: shared-timestamp
            mountPath: /usr/src/app/files
          - name: config-volume
            mountPath: /usr/src/app/config
            readOnly: true
