Log-output/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-output-svc
  namespace: app-space
spec:
  type: ClusterIP
  selector:
    app: writer-reader
  ports:
    - port: 1234
      protocol: TCP
      targetPort: 3000
